objects/agf__ADM_Epic__c.object
<CustomObject>
    <fields>
        <fullName>agf__Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Committed_By_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed By Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Design_Complete__c</fullName>
        <label>Design Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Design_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Design_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Development_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Development_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Health__c</fullName>
        <label>Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Quality_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__T_Shirt_Size__c</fullName>
        <label>T-Shirt Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Large</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active team.</errorMessage>
            <filterItems>
                <field>agf__ADM_Scrum_Team__c.agf__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Tech_Design_Complete__c</fullName>
        <label>Tech Design Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Test_Design_Complete__c</fullName>
        <label>Test Design Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Epic</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Epic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>